--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    
+    <h1>Create your own adventure.</h1>
+    <h2>by: Aaron, Tanush, and Andrew</h2>
 </body>
 </html>
