made homepage and link to another page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style/styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CYOApageNEUTRAL</title>
+    <link rel="stylesheet" href="style/styles.css" />
+  </head>
+  <body>
     <h1>Create your own adventure.</h1>
     <h2>by: Aaron, Tanush, and Andrew</h2>
-</body>
+    <img src="./assests/cyoapark.jpg" alt="open window to park" height="70px" />
+    <p>
+      You wake up on a Sunday morning, do you choose to go to the park or stay
+      in today?
+    </p>
+    <a href="http://127.0.0.1:5500/index2.html" target="_blank">Stay in today.</a>
+    <p>Go to park.</p>
+  </body>
 </html>
