--- a/index3.html
+++ b/index3.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CYOApageNEUTRAL</title>
-    <link rel="stylesheet" href="style/styles.css" />
+    <title>Document</title>
 </head>
 <body>
-
-<p>You stay in all day, your day is over. -NEUTRAL ENDING-</p>
-    
+    <img src="./assests/dragoncyoa.jpg" alt="dragon in the park" height="40px">
+    <p>You encounter a dragon, do you fight it?</p>
 </body>
 </html>
