--- a/index3.html
+++ b/index3.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <img src="./assests/dragoncyoa.jpg" alt="dragon in the park" height="40px">
-    <p>You encounter a dragon, do you fight it?</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CYOApageDRAGON</title>
+  </head>
+  <body>
+    <img
+      src="./assests/dragoncyoa.jpg"
+      alt="dragon in the park"
+      height="40px"
+    />
+    <p>You enter the park and encounter a dragon, do you fight it?</p>
+  </body>
 </html>
