--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       You wake up on a Sunday morning, do you choose to go to the park or stay
       in today?
     </p>
-    <a href="http://127.0.0.1:5500/index2.html" target="_blank">Stay in today.</a>
-    <p>Go to park.</p>
+    <a href="./pages/neutralending.html" target="_blank">Stay in today.</a>
+    <p><a h></a>Go to park.</p>
   </body>
 </html>
