--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style/styles.css" />
   </head>
   <body>
-    <h1>Create your own adventure.</h1>
+    <h1> Choose Your Own Adventure </h1> 
+    <h2 class="centerText"> By : Andrew, Aaron, and Tanush</h2>
+    <div class="centerButton">
+        <button class="startGameButton">Start Game</button>
+    </div>
+
+
+    <!-- <h1>Create your own adventure.</h1>
     <h2>by: Aaron, Tanush, and Andrew</h2>
     <img src="./assests/cyoapark.jpg" alt="open window to park" height="70px" />
     <p>
@@ -15,6 +22,6 @@
       in today?
     </p>
     <a href="http://127.0.0.1:5500/index2.html" target="_blank">Stay in today.</a>
-    <p>Go to park.</p>
+    <p>Go to park.</p> -->
   </body>
 </html>
