--- a/pages/Rdragonfight.html
+++ b/pages/Rdragonfight.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CYOApageDRAGON</title>
+    <link rel="stylesheet" href="/style/styles.css">
   </head>
   <body>
     <img
-      src="./assests/dragoncyoa.jpg"
+      src="/assests/dragoncyoa.jpg"
       alt="dragon in the park"
-      height="40px"
+      height="800px"
     />
-    <p>You enter the park and encounter a dragon, do you fight it?</p>
+
+    <div id="buttonContainer" class="buttonOption1">
+      <a href="./Nicecream.html"
+        ><button class="buttonOptions">Fight the dragon.</button></a
+      >
+      <a href="./Nbadending1.html"
+        ><button class="buttonOptions">Run away!</button></a
+      >
+    </div>
+
+    <p class="centerText">
+      You enter the park and encounter a dragon, do you fight it?
+    </p>
   </body>
 </html>
