--- a/pages/Rgoodending2.html
+++ b/pages/Rgoodending2.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style/styles.css">
 </head>
 <body>
-    
+    <div id="buttonContainer" class="buttonOption1">
+        <a href="/index.html"
+          ><button class="buttonOptions">Play Again</button></a
+        >
+      </div>
+  
+      <p class="centerText">
+        You make it home safely and end your day. -GOOD ENDING-
+      </p>
 </body>
 </html>
