--- a/pages/Rneutralending.html
+++ b/pages/Rneutralending.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CYOApageNEUTRAL</title>
-    <link rel="stylesheet" href="style/styles.css" />
+    <link rel="stylesheet" href="/style/styles.css">
 </head>
 <body>
 
-<p>You stay in all day, your day is over. -NEUTRAL ENDING-</p>
+    <div id="buttonContainer" class="buttonOption1">
+        <a href="/index.html"
+          ><button class="buttonOptions">Play Again</button></a
+        >
+      </div>
+  
+      <p class="centerText">
+        You had a chill day at home. -NEUTRAL ENDING-
+      </p>
     
 </body>
 </html>
