--- a/pages/Abadending2.html
+++ b/pages/Abadending2.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
+    <!-- Bad ending 2 -->
+        <h1> Choose Your Own Adventure </h1>
+    <div id="buttonContainer" class="buttonOption1">
+        <button class="buttonOptions"> Button Option 1 </button>
+        <button class="buttonOptions"> Button Option 2 </button>
+        <button class="buttonOptions"> Button Option 3 </button>
+        <!-- <a href="./Nicecream.html"><button class="buttonOptions"> Fight the dragon.</button></a> -->
+    </div>
+
+    <p class="centerText"> Story Text Goes here Story Text Goes hereStory Text Goes hereStory Text Goes hereStory Text Goes hereStory
+        Story Text Goes hereStory Text Goes hereStory Text Goes hereStory Text Goes here
+        Story Text Goes hereStory Text Goes hereStory Text Goes hereStory Text Goes here
+        Story Text Goes hereStory Text Goes hereStory Text Goes hereStory Text Goes here
+        Story Text Goes hereStory Text Goes hereStory Text Goes hereStory Text Goes here Text Goes hereStory Text Goes hereStory Text Goes here</p>
     
 </body>
 </html>
