--- a/pages/Astayorhome.html
+++ b/pages/Astayorhome.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
-    
+    <!-- Stay Home -->
+    <h1> Choose Your Own Adventure </h1>
+    <div id="buttonContainer" class="buttonOption1">     
+        
+        <!-- <a href="./Nicecream.html"><button class="buttonOptions"> Fight the dragon.</button></a> -->
+        <a href="./Rgoodending2.html"><button class="buttonOptions"> Stay at Park.</button></a>
+        <a href="./Abadending2.html"><button class="buttonOptions"> Go Home.</button></a>
+    </div>
+
+    <p class="centerText"> You're at the park  </p>
 </body>
 </html>
