--- a/pages/Nbadending1.html
+++ b/pages/Nbadending1.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CYOApageBAD</title>
+    <link rel="stylesheet" href="/style/styles.css" />
   </head>
   <body>
-    <p>
+    <div id="buttonContainer" class="buttonOption1">
+      <a href="/index.html"
+        ><button class="buttonOptions">Play Again</button></a
+      >
+    </div>
+    <p class="centerText">
       You choose to not fight the dragon and run away, The dragon chases you
       down and burns you.-BAD ENDING-
     </p>
