--- a/pages/Ngoodending1.html
+++ b/pages/Ngoodending1.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="/style/styles.css" />
+  </head>
+  <body>
+    <div id="buttonContainer" class="buttonOption1">
+      <a href="/index.html"
+        ><button class="buttonOptions">Play Again</button></a
+      >
+    </div>
+    <p class="centerText">You accepted the ice cream! Hooray!-GOOD ENDING-</p>
+  </body>
 </html>
