--- a/pages/Nicecream.html
+++ b/pages/Nicecream.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="/style/styles.css" />
+  </head>
+  <body>
+    <div id="buttonContainer" class="buttonOption1">
+      <a href="./Ngoodending1.html"
+        ><button class="buttonOptions">Take the Icecream.</button></a
+      >
+      <a href="./Astayorhome.html"
+        ><button class="buttonOptions">Dont take the Icecream.</button></a
+      >
+    </div>
+
+    <p class="centerText">
+      You defeated the dragon! A man offers you ice cream. Do you accept?
+    </p>
+  </body>
 </html>
