--- a/pages/Nbadending1.html
+++ b/pages/Nbadending1.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style/styles.css" />
   </head>
   <body>
+   <!-- Bad Ending 1 -->
     <div id="buttonContainer" class="buttonOption1">
       <a href="/index.html"
         ><button class="buttonOptions">Play Again</button></a
