--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1> Choose Your Own Adventure </h1> 
     <h2 class="centerText"> By : Andrew, Aaron, and Tanush</h2>
     <div class="centerButton">
-        <button class="startGameButton">Start Game</button>
+      <a href="./pages/Rparkorchill.html"
+      ><button class="buttonOptions">Start Game</button></a
+    >
     </div>
 
 
