Fixed replay button

--- a/pages/Abadending2.html
+++ b/pages/Abadending2.html
@@ -13,10 +13,8 @@
         
     <div id="buttonContainer" class="buttonOption1">
         <div class="replayButtonContainer">
-            <a href="./.html"> <button class="replayButton"> Replay Game </button> </a>
+            <a href="./Rparkorchill.html"> <button class="buttonOptions"> Replay Game </button> </a>
         </div>
-        
-        <!-- <a href="./Nicecream.html"><button class="buttonOptions"> Fight the dragon.</button></a> -->
     </div>
 
     <p class="centerText"> You stay at the park, but its a little too hot! The heat gets to you quick! This it, this is the end. You end up dying of heatstroke. </p>
