--- a/pages/Astayorhome.html
+++ b/pages/Astayorhome.html
@@ -16,6 +16,6 @@
         <a href="./Abadending2.html"><button class="buttonOptions"> Go Home.</button></a>
     </div>
 
-    <p class="centerText"> You're at the park </p>
+    <p class="centerText"> You think to yourself </p>
 </body>
 </html>
