--- a/pages/Nbadending1.html
+++ b/pages/Nbadending1.html
@@ -13,6 +13,7 @@
         ><button class="buttonOptions">Play Again</button></a
       >
     </div>
+    <!--centering -->
     <p class="centerText">
       You choose to not fight the dragon and run away, The dragon chases you
       down and burns you.-BAD ENDING-
