--- a/pages/Astayorhome.html
+++ b/pages/Astayorhome.html
@@ -12,10 +12,12 @@
     <div id="buttonContainer" class="buttonOption1">     
 
         <!-- <a href="./Nicecream.html"><button class="buttonOptions"> Fight the dragon.</button></a> -->
-        <a href="./Rgoodending2.html"><button class="buttonOptions"> Stay at Park.</button></a>
-        <a href="./Abadending2.html"><button class="buttonOptions"> Go Home.</button></a>
+        <a href="./Abadending2.html"><button class="buttonOptions"> Stay at the park.</button></a>
+        <a href="./Rgoodending2.html"><button class="buttonOptions"> Go Home.</button></a>
     </div>
 
     <p class="centerText"> You think to yourself </p>
 </body>
 </html>
+
+./Abadending2.html
