--- a/pages/Ngoodending1.html
+++ b/pages/Ngoodending1.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="/style/styles.css" />
   </head>
   <body>
+    <div>
+  
+      <img src="/assests/icecream.png" alt="BurningGuy">
+    </div>
+
     <div id="buttonContainer" class="buttonOption1">
       <a href="/index.html"
         ><button class="buttonOptions">Play Again</button></a
