--- a/pages/Nicecream.html
+++ b/pages/Nicecream.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/style/styles.css" />
   </head>
   <body>
+    <div></div>
+  
+      <img src="/assests/Icecreamman.jpeg" alt="BurningGuy">
+    </div>
     <div id="buttonContainer" class="buttonOption1">
       <a href="./Ngoodending1.html"
         ><button class="buttonOptions">Take the Icecream.</button></a
