--- a/pages/Nbadending1.html
+++ b/pages/Nbadending1.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/style/styles.css" />
   </head>
   <body>
+    <div>
+  
+      <img src="/assests/burningguy.jpeg" alt="BurningGuy">
+    </div>
    <!-- Bad Ending 1 -->
     <div id="buttonContainer" class="buttonOption1">
       <a href="/index.html"
