--- a/pages/Examplepage.html
+++ b/pages/Examplepage.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylsheet"> 
+    <link rel="stylesheet" href="/style/styles.css" />
+    <style>
+        body  {
+          background-image: url("cyoapark.jpg");
+          background-color: #cccccc42;
+        }
+    </style>
 </head>
 <body>
         <!--    Tittle Screen Page   -->
@@ -35,6 +41,13 @@
         <div class="replayButtonContainer">
             <button class="replayButton"> Replay Game </button>
         </div>
+
+        <style>
+            body
+            {
+                background-image: url('cyoapark.jpg');
+            }
+        </style>
     
 </body>
 </html>
