--- a/pages/Rdragonfight.html
+++ b/pages/Rdragonfight.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="/style/styles.css">
   </head>
   <body>
+    <h1> Choose Your Own Adventure </h1>
     <img
       src="/assests/dragoncyoa.jpg"
       alt="dragon in the park"
       height="800px"
     />
-
     <div id="buttonContainer" class="buttonOption1">
       <a href="./Nicecream.html"
         ><button class="buttonOptions">Fight the dragon.</button></a
