--- a/pages/Rgoodending2.html
+++ b/pages/Rgoodending2.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/style/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/style/styles.css" />
+  </head>
+  <body>
+    <h1>Choose Your Own Adventure</h1>
     <div id="buttonContainer" class="buttonOption1">
-        <a href="/index.html"
-          ><button class="buttonOptions">Play Again</button></a
-        >
-      </div>
-  
-      <p class="centerText">
-        You make it home safely and end your day. -GOOD ENDING-
-      </p>
-</body>
+      <a href="/index.html"
+        ><button class="buttonOptions">Play Again</button></a
+      >
+    </div>
+
+    <p class="centerText">
+      You make it home safely and end your day. -GOOD ENDING-
+    </p>
+  </body>
 </html>
