--- a/pages/Rneutralending.html
+++ b/pages/Rneutralending.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CYOApageNEUTRAL</title>
-    <link rel="stylesheet" href="/style/styles.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="/style/styles.css" />
+  </head>
+  <body>
+    <h1>Choose Your Own Adventure</h1>
     <div id="buttonContainer" class="buttonOption1">
-        <a href="/index.html"
-          ><button class="buttonOptions">Play Again</button></a
-        >
-      </div>
-  
-      <p class="centerText">
-        You had a chill day at home. -NEUTRAL ENDING-
-      </p>
-    
-</body>
+      <a href="/index.html"
+        ><button class="buttonOptions">Play Again</button></a
+      >
+    </div>
+
+    <p class="centerText">You had a chill day at home. -NEUTRAL ENDING-</p>
+  </body>
 </html>
