--- a/pages/Rparkorchill.html
+++ b/pages/Rparkorchill.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/style/styles.css">
-</head>
-<body>
-    <div id="buttonContainer" class="buttonOption1">
-        <a href="./Rneutralending.html"
-          ><button class="buttonOptions">Stay at home.</button></a
-        >
-        <a href="./Rdragonfight.html"
-          ><button class="buttonOptions">Go to park.</button></a
-        >
-      </div>
+    <link rel="stylesheet" href="/style/styles.css" />
+  </head>
+  <body>
+    <h1>Choose Your Own Adventure</h1>
+    <div class="imageformat">
+      <img src="/assests/cyoapark.jpg" alt="open window to park" />
+    </div>
 
-    <p class="centerText"> You wake up after a long night, do you choose to go to the park or will you stay at home for the day?</p>
-    
-</body>
+    <div id="buttonContainer" class="buttonOption1">
+      <a href="./Rneutralending.html"
+        ><button class="buttonOptions">Stay at home.</button></a
+      >
+      <a href="./Rdragonfight.html"
+        ><button class="buttonOptions">Go to park.</button></a
+      >
+    </div>
+
+    <p class="centerText">
+      You wake up after a long night, do you choose to go to the park or will
+      you stay at home for the day?
+    </p>
+  </body>
 </html>
