--- a/index.html
+++ b/index.html
@@ -9,26 +9,15 @@
   <body>
     <h1> Choose Your Own Adventure </h1> 
     <h2 class="centerText"> By : Andrew, Aaron, and Tanush</h2>
+
+    <div class="imageformat">
+      <img src="/assests/7-treasure-map-cartoon-clipart-600x413.jpg" alt="tresure map" height="600px">
+    </div>
+
     <div class="centerButton">
       <a href="./pages/Rparkorchill.html"
       ><button class="buttonOptions">Start Game</button></a
     >
     </div>
-
-
-    <!-- <h1>Create your own adventure.</h1>
-    <h2>by: Aaron, Tanush, and Andrew</h2>
-    <img src="./assests/cyoapark.jpg" alt="open window to park" height="70px" />
-    <p>
-      You wake up on a Sunday morning, do you choose to go to the park or stay
-      in today?
-    </p>
-<<<<<<< HEAD
-    <a href="http://127.0.0.1:5500/index2.html" target="_blank">Stay in today.</a>
-    <p>Go to park.</p> -->
-=======
-    <a href="./pages/neutralending.html" target="_blank">Stay in today.</a>
-    <p><a h></a>Go to park.</p>
->>>>>>> b6216d6331bcd985c3879f78d939fdbaf3f4579f
   </body>
 </html>
