--- a/pages/Abadending2.html
+++ b/pages/Abadending2.html
@@ -9,11 +9,15 @@
 <body>
     <!-- Bad ending 2 -->
         <h1> Choose Your Own Adventure </h1>
-        <h2 class="centerText"> Bad Ending</h2>
+        <h2> BAD ENDING</h2>
+
+        <div class="imageformat">
+            <img src="/assests/DyingOfHeat.jpg" alt="man sweating in heat" height="600px">
+        </div>
         
     <div id="buttonContainer" class="buttonOption1">
         <div class="replayButtonContainer">
-            <a href="./Rparkorchill.html"> <button class="buttonOptions"> Replay Game </button> </a>
+            <a href="./Rparkorchill.html"> <button class="buttonOptions"> Play Again </button> </a>
         </div>
     </div>
 
