--- a/pages/Astayorhome.html
+++ b/pages/Astayorhome.html
@@ -9,6 +9,10 @@
 <body >
     <!-- Stay Home -->
     <h1> Choose Your Own Adventure </h1>
+
+    <div class="imageformat">
+        <img src="/assests/parkcyoa.jpg" alt="park landscape" height="600px" width="1200px">
+    </div>
     <div id="buttonContainer" class="buttonOption1">     
 
         <!-- <a href="./Nicecream.html"><button class="buttonOptions"> Fight the dragon.</button></a> -->
@@ -16,6 +20,6 @@
         <a href="./Rgoodending2.html"><button class="buttonOptions"> Go Home.</button></a>
     </div>
 
-    <p class="centerText"> You think to yourself </p>
+    <p class="centerText"> You think to yourself... </p>
 </body>
 </html>
