--- a/pages/Nbadending1.html
+++ b/pages/Nbadending1.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="/style/styles.css" />
   </head>
   <body>
-    <div>
+    <h1> Choose Your Own Adventure </h1>
+    <h2>BAD ENDING</h2>
+    <div class="imageformat">
   
-      <img src="/assests/burningguy.jpeg" alt="BurningGuy">
+      <img src="/assests/burningguy.jpeg" alt="BurningGuy" height="600px" >
     </div>
    <!-- Bad Ending 1 -->
     <div id="buttonContainer" class="buttonOption1">
@@ -20,7 +22,7 @@
     <!--centering -->
     <p class="centerText">
       You choose to not fight the dragon and run away, The dragon chases you
-      down and burns you.-BAD ENDING-
+      down and burns you.
     </p>
   </body>
 </html>
