--- a/pages/Ngoodending1.html
+++ b/pages/Ngoodending1.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="/style/styles.css" />
   </head>
   <body>
-    <div>
+    <h1> Choose Your Own Adventure </h1>
+    <h2>GOOD ENDING</h2>
+    <div class="imageformat">
   
-      <img src="/assests/icecream.png" alt="BurningGuy">
+      <img src="/assests/icecream.png" alt="BurningGuy" width="600px">
     </div>
 
     <div id="buttonContainer" class="buttonOption1">
@@ -17,6 +19,6 @@
         ><button class="buttonOptions">Play Again</button></a
       >
     </div>
-    <p class="centerText">You accepted the ice cream! Hooray!-GOOD ENDING-</p>
+    <p class="centerText">You accepted the ice cream! Hooray!</p>
   </body>
 </html>
