--- a/pages/Nicecream.html
+++ b/pages/Nicecream.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="/style/styles.css" />
   </head>
   <body>
-    <div></div>
-  
-      <img src="/assests/Icecreamman.jpeg" alt="BurningGuy">
+   
+    <h1> Choose Your Own Adventure </h1>
+    <div class="imageformat">
+      <img src="/assests/Icecreamman.jpeg" alt="BurningGuy" width="600px" >
     </div>
     <div id="buttonContainer" class="buttonOption1">
       <a href="./Ngoodending1.html"
