--- a/pages/Rdragonfight.html
+++ b/pages/Rdragonfight.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <h1> Choose Your Own Adventure </h1>
+    <div class="imageformat">
     <img
       src="/assests/dragoncyoa.jpg"
+      width="600px"
       alt="dragon in the park"
-      height="800px"
-    />
+      />
+  </div>
     <div id="buttonContainer" class="buttonOption1">
       <a href="./Nicecream.html"
         ><button class="buttonOptions">Fight the dragon.</button></a
