--- a/pages/Rgoodending2.html
+++ b/pages/Rgoodending2.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <h1>Choose Your Own Adventure</h1>
+    <h2>GOOD ENDING</h2>
+
+    <div class="imageformat">
+      <img src="/assests/goodnightcyoa.jpg" alt="bedroom at night" height="600px">
+    </div>
     <div id="buttonContainer" class="buttonOption1">
       <a href="/index.html"
         ><button class="buttonOptions">Play Again</button></a
@@ -15,7 +20,7 @@
     </div>
 
     <p class="centerText">
-      You make it home safely and end your day. -GOOD ENDING-
+      You make it home safely and end your day. 
     </p>
   </body>
 </html>
