--- a/pages/Rneutralending.html
+++ b/pages/Rneutralending.html
@@ -8,12 +8,18 @@
   </head>
   <body>
     <h1>Choose Your Own Adventure</h1>
+    <h2>NEUTRAL ENDING</h2>
+
+<div class="imageformat">
+  <img src="/assests/chillcyoa.jpg" alt="lady sitting on couch with cat" height="600px">
+</div>
+
     <div id="buttonContainer" class="buttonOption1">
       <a href="/index.html"
         ><button class="buttonOptions">Play Again</button></a
       >
     </div>
 
-    <p class="centerText">You had a chill day at home. -NEUTRAL ENDING-</p>
+    <p class="centerText">You had a chill day at home. </p>
   </body>
 </html>
