--- a/pages/Rparkorchill.html
+++ b/pages/Rparkorchill.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Choose Your Own Adventure</h1>
     <div class="imageformat">
-      <img src="/assests/cyoapark.jpg" alt="open window to park" />
+      <img src="/assests/cyoapark.jpg" alt="open window to park" height="600px" />
     </div>
 
     <div id="buttonContainer" class="buttonOption1">
